<resources>
    <string name="app_name">JOMAshop</string>
    <string name="btn_start">Start shopping</string>
    <string name="textview_Total">Total  :</string>
    <string name="textview_limit">Limit :</string>
    <string name="btn_done">Im done</string>
    <string name="editTextProductNameSearch">Type in the product name</string>
    <string name="btn_NewProduct">New product</string>
    <string name="btnScanner">Scan barcode!</string>
    <string name="textViewProductName">Product name</string>
    <string name="textViewPrice">Price</string>
    <string name="favourite">Favourite?</string>
    <string name="title_activity_scaner_test">scanerTest</string>
    <string name="action_settings">Settings</string>
    <string name="btn_statistics">Statistics</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="statisticsError">Can\'t get statistics</string>

    <string name="hello_world">Hello world!</string>
</resources>
