<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joma.jomashop.MainActivity">

    <TextView
        android:id="@+id/textView_Total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/textview_Total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wantedToSpend"
        android:layout_alignEnd="@+id/textView_Total"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView_Total"
        android:layout_below="@+id/textView_Total"
        android:text="@string/textview_limit"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="buttonDone"
        android:text="@string/btn_done" />

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView_Total"
        android:layout_toRightOf="@+id/textView_Total"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/wantedToSpend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewTotalPrice"
        android:layout_alignRight="@+id/textViewTotalPrice"
        android:layout_below="@+id/textViewTotalPrice"
        android:text="15"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <AutoCompleteTextView
        android:id="@+id/editTextProductNameSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonDone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonDone"
        android:layout_below="@+id/textView"
        android:layout_marginTop="23dp"
        android:allowUndo="false"
        android:selectAllOnFocus="true"
        android:text="@string/editTextProductNameSearch" />

    <Button
        android:id="@+id/buttonNewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="newProduct"
        android:text="@string/btn_NewProduct" />

    <Button
        android:id="@+id/buttonScanBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="btnScanBarcode"
        android:text="@string/btnScanner" />

    <ListView
        android:id="@+id/ShoppingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonNewProduct"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextProductNameSearch" />

    <TextView
        android:id="@+id/currencySymbol1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewTotalPrice"
        android:layout_toEndOf="@+id/textViewTotalPrice"
        android:layout_toRightOf="@+id/textViewTotalPrice"
        android:text="c"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/currencySymbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wantedToSpend"
        android:layout_toEndOf="@+id/wantedToSpend"
        android:layout_toRightOf="@+id/wantedToSpend"
        android:text="c"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
