<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.joma.jomashop.ProductActivity"
    android:touchscreenBlocksFocus="false"
    android:textAlignment="textStart">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewProductName"
        android:id="@+id/textViewProductName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editTextProductName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextProductName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textViewProductName"
        android:layout_toEndOf="@+id/textViewProductName"
        android:textAlignment="viewEnd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewPrice"
        android:id="@+id/textViewPrice"
        android:layout_below="@+id/textViewProductName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editTextPrice" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/editTextPrice"
        android:layout_alignTop="@+id/textViewPrice"
        android:layout_alignRight="@+id/editTextProductName"
        android:layout_alignEnd="@+id/editTextProductName"
        android:layout_toRightOf="@+id/textViewProductName"
        android:layout_toEndOf="@+id/textViewProductName"
        android:textAlignment="viewEnd"
        android:text=" " />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="favourite"
        android:id="@+id/checkBoxFavourite"
        android:layout_below="@+id/editTextPrice"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScanner"
        android:id="@+id/button3"
        android:layout_below="@+id/checkBoxFavourite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE"
        android:id="@+id/buttonSave"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/checkBoxFavourite"
        android:layout_alignEnd="@+id/checkBoxFavourite"
        android:onClick="onClickSave" />

</RelativeLayout>
